[metadata]
name = aurweb
version = 1.0.0

[flake8]
max-line-length = 88
extend-ignore = E203 W503

[options]
package_dir =
	aurweb=aurweb

install_requires =
	# General
	aiofiles==23.2.1
	aiohttp==3.9.3
	asgiref==3.8.1
	bcrypt==4.1.2
	beautifulsoup4==4.12.3
	bleach==6.1.0
	email-validator==2.1.1
	fakeredis==2.21.3
	feedgen==1.0.0
	httpx==0.27.0
	itsdangerous==2.1.2
	lxml==5.1.0
	makedeb-srcinfo==0.8.1
	orjson==3.10.0
	protobuf==5.26.1
	pygit2==1.14.1
	python-multipart==0.0.9
	redis==5.0.3
	requests==2.31.0
	paginate==0.5.6
	sentry-sdk[fastapi]==1.43.0

	# SQL
	alembic==1.13.1
	mysqlclient==2.2.4
	Authlib==1.3.0
	Jinja2==3.1.3
	Markdown==3.6
	Werkzeug==3.0.1
	SQLAlchemy==2.0.29

	# ASGI
	uvicorn==0.29.0
	gunicorn==21.2.0
	Hypercorn==0.16.0
	mysql-connector==2.2.9
	prometheus-fastapi-instrumentator==7.0.0
	pytest-xdist==3.5.0
	filelock==3.13.3
	posix-ipc==1.1.1
	pyalpm==0.10.6
	fastapi==0.110.0

	# Dev dependencies.
	autoflake==2.3.1
	black==24.3.0
	flake8==7.0.0
	isort==5.13.2
	coverage==7.4.4
	pytest==8.1.1
	pytest-asyncio==0.23.6
	pytest-cov==5.0.0
	pytest-tap==3.4

[options.entry_points]
console_scripts =
	aurweb-git-auth = aurweb.git.auth:main
	aurweb-git-serve = aurweb.git.serve:main
	aurweb-git-update = aurweb.git.update:main
	aurweb-mkpkglists = aurweb.scripts.mkpkglists:main
	aurweb-notify = aurweb.scripts.notify:main
	aurweb-pkgmaint = aurweb.scripts.pkgmaint:main
	aurweb-popupdate = aurweb.scripts.popupdate:main
	aurweb-rendercomment = aurweb.scripts.rendercomment:main
	aurweb-tuvotereminder = aurweb.scripts.tuvotereminder:main
	aurweb-usermaint = aurweb.scripts.usermaint:main
	aurweb-config = aurweb.scripts.config:main
	aurweb-adduser = aurweb.scripts.adduser:main
	aurweb-oodcheck = aurweb.scripts.oodcheck:main
	aurweb-cleankeys = aurweb.scripts.cleankeys:main
