[metadata]
name = aurweb
version = 1.0.0

[flake8]
max-line-length = 88
extend-ignore = E203 W503

[options]
package_dir =
	aurweb=aurweb

install_requires =
	# General
	aiofiles==24.1.0
	aiohttp==3.10.10
	asgiref==3.8.1
	bcrypt==4.2.0
	beautifulsoup4==4.12.3
	bleach==6.1.0
	email-validator==2.2.0
	fakeredis==2.25.1
	feedgen==1.0.0
	httpx==0.27.2
	itsdangerous==2.2.0
	lxml==5.3.0
	makedeb-srcinfo==0.8.1
	orjson==3.10.9
	protobuf==5.28.2
	pygit2==1.16.0
	python-multipart==0.0.12
	redis==5.1.1
	requests==2.32.3
	paginate==0.5.7
	sentry-sdk[fastapi]==2.17.0

	# SQL
	alembic==1.13.3
	mysqlclient==2.2.5
	Authlib==1.3.2
	Jinja2==3.1.4
	Markdown==3.7
	Werkzeug==3.0.4
	SQLAlchemy==2.0.36

	# ASGI
	uvicorn==0.32.0
	gunicorn==23.0.0
	Hypercorn==0.17.3
	mysql-connector==2.2.9
	prometheus-fastapi-instrumentator==7.0.0
	pytest-xdist==3.6.1
	filelock==3.16.1
	posix-ipc==1.1.1
	pyalpm==0.10.6
	fastapi==0.115.2

	# Dev dependencies.
	autoflake==2.3.1
	black==24.10.0
	flake8==7.1.1
	isort==5.13.2
	coverage==7.6.4
	pytest==8.3.3
	pytest-asyncio==0.24.0
	pytest-cov==5.0.0
	pytest-tap==3.4

[options.entry_points]
console_scripts =
	aurweb-git-auth = aurweb.git.auth:main
	aurweb-git-serve = aurweb.git.serve:main
	aurweb-git-update = aurweb.git.update:main
	aurweb-mkpkglists = aurweb.scripts.mkpkglists:main
	aurweb-notify = aurweb.scripts.notify:main
	aurweb-pkgmaint = aurweb.scripts.pkgmaint:main
	aurweb-popupdate = aurweb.scripts.popupdate:main
	aurweb-rendercomment = aurweb.scripts.rendercomment:main
	aurweb-tuvotereminder = aurweb.scripts.tuvotereminder:main
	aurweb-usermaint = aurweb.scripts.usermaint:main
	aurweb-config = aurweb.scripts.config:main
	aurweb-adduser = aurweb.scripts.adduser:main
	aurweb-oodcheck = aurweb.scripts.oodcheck:main
	aurweb-cleankeys = aurweb.scripts.cleankeys:main
