[metadata]
name = aurweb
version = 1.0.0

[flake8]
max-line-length = 88
extend-ignore = E203 W503

[options]
package_dir =
	aurweb=aurweb

install_requires =
	# General
	aiofiles==25.1.0
	aiohttp==3.13.2
	asgiref==3.11.0
	bcrypt==5.0.0
	beautifulsoup4==4.14.2
	bleach==6.3.0
	email-validator==2.3.0
	fakeredis==2.32.1
	feedgen==1.0.0
	httpx==0.28.1
	itsdangerous==2.2.0
	lxml==6.0.2
	makedeb-srcinfo==0.8.1
	orjson==3.11.4
	protobuf==6.33.1
	pygit2==1.19.0
	python-multipart==0.0.20
	redis==7.1.0
	requests==2.32.5
	paginate==0.5.7
	sentry-sdk[fastapi]==2.45.0

	# SQL
	alembic==1.17.2
	mysqlclient==2.2.7
	Authlib==1.6.5
	Jinja2==3.1.6
	Markdown==3.10
	Werkzeug==3.1.3
	SQLAlchemy==2.0.44

	# ASGI
	uvicorn==0.38.0
	gunicorn==23.0.0
	Hypercorn==0.18.0
	mysql-connector==2.2.9
	prometheus-fastapi-instrumentator==7.1.0
	pytest-xdist==3.8.0
	filelock==3.20.0
	posix-ipc==1.3.2
	pyalpm==0.10.12
	fastapi==0.121.3

	# Dev dependencies.
	autoflake==2.3.1
	black==25.11.0
	flake8==7.3.0
	isort==7.0.0
	coverage==7.12.0
	pytest==9.0.1
	pytest-asyncio==1.3.0
	pytest-cov==7.0.0
	pytest-tap==3.5

[options.entry_points]
console_scripts =
	aurweb-git-auth = aurweb.git.auth:main
	aurweb-git-serve = aurweb.git.serve:main
	aurweb-git-update = aurweb.git.update:main
	aurweb-mkpkglists = aurweb.scripts.mkpkglists:main
	aurweb-notify = aurweb.scripts.notify:main
	aurweb-pkgmaint = aurweb.scripts.pkgmaint:main
	aurweb-popupdate = aurweb.scripts.popupdate:main
	aurweb-rendercomment = aurweb.scripts.rendercomment:main
	aurweb-tuvotereminder = aurweb.scripts.tuvotereminder:main
	aurweb-usermaint = aurweb.scripts.usermaint:main
	aurweb-config = aurweb.scripts.config:main
	aurweb-adduser = aurweb.scripts.adduser:main
	aurweb-oodcheck = aurweb.scripts.oodcheck:main
	aurweb-cleankeys = aurweb.scripts.cleankeys:main
